--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,9 @@ python-dotenv==1.0.0
 requests==2.31.0
 beautifulsoup4==4.12.2
 numpy<2.0.0  # Ensure compatibility with ChromaDB
-chromadb==0.4.18
+chromadb==0.4.18  # Includes DefaultEmbeddingFunction for all-MiniLM-L6-v2
 keybert==0.7.0
 pydantic==2.5.2
 jsonschema==4.19.1
 ijson==3.2.3
+tqdm==4.66.1  # For progress bars
