--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,4 @@ jsonschema==4.19.1
 ijson==3.2.3
 tqdm==4.66.1  # For progress bars
 openai==1.12.0  # For OpenAI API integration
+rich==13.7.0  # For test script output formatting
