--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -11,8 +11,7 @@ server {
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
-        # Set the Host header to the backend's hostname
-        proxy_set_header Host metpol-ai-backend.onrender.com;
+        proxy_set_header Host $host;
         proxy_cache_bypass $http_upgrade;
     }
 
