--- a/render.yaml
+++ b/render.yaml
@@ -34,4 +34,4 @@ services:
     numInstances: 1
     envVars:
       - key: BACKEND_API_URL
-        value: https://metpol-ai-backend.onrender.com
+        value: https://metpol-ai-backend.internal
