--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -13,6 +13,10 @@ server {
         proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
         proxy_cache_bypass $http_upgrade;
+        
+        # SSL settings
+        proxy_ssl_server_name on;
+        proxy_ssl_name metpol-ai-backend.onrender.com;
     }
 
     # For React Router - serve index.html for any path that doesn't match a file
