--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -7,7 +7,7 @@ server {
     # API requests proxy
     location /api/ {
         # This will be updated with the actual backend URL during deployment
-        proxy_pass ${BACKEND_API_URL};
+        proxy_pass ${BACKEND_API_URL}/;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
