Fix proxy_pass directive in nginx configuration to route API requests correctly

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -7,11 +7,11 @@ server {
     # API requests proxy
     location /api/ {
         # This will be updated with the actual backend URL during deployment
-        proxy_pass ${BACKEND_API_URL}/;
+        proxy_pass ${BACKEND_API_URL}/api/;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
+        proxy_set_header Host metpol-ai-backend.onrender.com;
         proxy_cache_bypass $http_upgrade;
         
         # SSL settings
