--- a/requirements.txt
+++ b/requirements.txt
@@ -10,5 +10,5 @@ pydantic==2.5.2
 jsonschema==4.19.1
 ijson==3.2.3
 tqdm==4.66.1  # For progress bars
-openai==1.12.0  # For OpenAI API integration
+openai>=1.15.0  # For OpenAI API integration
 rich==13.7.0  # For test script output formatting
