--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,11 +6,11 @@ repos:
       - id: end-of-file-fixer
       - id: check-yaml
       - id: check-added-large-files
-        exclude: '^data/index/'
+        exclude: "^data/index/"
       - id: check-merge-conflict
       - id: debug-statements
       - id: mixed-line-ending
-        args: ['--fix=lf']
+        args: ["--fix=lf"]
 
   - repo: https://github.com/psf/black
     rev: 25.1.0
@@ -23,3 +23,14 @@ repos:
     hooks:
       - id: ruff
         args: [--fix, --exit-non-zero-on-fix]
+
+  # Custom local hooks
+  - repo: local
+    hooks:
+      - id: update-git-index
+        name: Update Git Index
+        description: Updates .gitignore to only include the latest Chroma index directory
+        entry: python update_git_index.py
+        language: python
+        pass_filenames: false
+        always_run: true
