Use unstructuredHTML and RecursiveCharacterTextSplitter for extracting content

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,30 @@
-fastapi==0.115.0
-uvicorn==0.24.0
-python-dotenv==1.0.0
+# Core backend
+fastapi==0.111.0
+uvicorn==0.27.0
 requests==2.31.0
-beautifulsoup4==4.12.2
-numpy<2.0.0  # Ensure compatibility with ChromaDB
-chromadb==0.4.18  # Includes DefaultEmbeddingFunction for all-MiniLM-L6-v2
-keybert==0.7.0
-pydantic==2.5.2
-jsonschema==4.19.1
-ijson==3.2.3
-tqdm==4.66.1  # For progress bars
-openai>=1.15.0  # For OpenAI API integration
-rich==13.7.0  # For test script output formatting
+python-dotenv==1.0.1
+
+# Vector DB + Embedding
+chromadb==0.4.24
+sentence-transformers==2.6.1
+keybert==0.8.2
+
+# LangChain stack (pre-langsmith, safe)
+langchain==0.1.14
+langchain-community==0.0.30
+
+# HTML parsing and cleaning
+unstructured==0.13.2
+python-magic==0.4.27
+ftfy==6.1.3
+
+# Pydantic
+pydantic==2.7.1
+pydantic-settings==2.2.1
+
+# Utilities
+tqdm==4.66.1
+rich==13.7.0
+
+# OpenAI client (new API)
+openai>=1.0.0
