--- a/pytest.ini
+++ b/pytest.ini
@@ -3,6 +3,7 @@ testpaths = tests
 python_files = test_*.py
 python_classes = Test*
 python_functions = test_*
+pythonpath = .  # Ensures root-level and app-level modules are importable
 markers =
     unit: marks tests as unit tests
     integration: marks tests as integration tests
