--- a/app/tests/pytest.ini
+++ b/app/tests/pytest.ini
@@ -1,9 +1,10 @@
 [pytest]
-testpaths = tests
+testpaths = app/tests
 python_files = test_*.py
 python_classes = Test*
 python_functions = test_*
-pythonpath = .  # Ensures root-level and app-level modules are importable
+pythonpath = .
+addopts = --strict-markers
 markers =
     unit: marks tests as unit tests
     integration: marks tests as integration tests
