--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,27 +1,15 @@
 version: "3.9"
-
 services:
-  backend:
+  app:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: metpol-backend
+    container_name: metpol-app
     volumes:
-      - ./app/data:/app/app/data  # Persist embeddings/index
+      - ./app/data:/app/app/data
     environment:
       - OPENAI_API_KEY=${OPENAI_API_KEY}
       - CHROMA_DB_PATH=/app/app/data/index
     ports:
       - "8000:8000"
-    restart: unless-stopped
-
-  frontend:
-    build:
-      context: ./frontend
-      dockerfile: Dockerfile
-    container_name: metpol-frontend
-    environment:
-      - BACKEND_API_URL=http://localhost:8000
-    ports:
-      - "3000:80"
     restart: unless-stopped
