--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -24,7 +24,7 @@ repos:
       - id: end-of-file-fixer
       - id: check-yaml
       - id: check-added-large-files
-        exclude: "^app/data/index/"
+        exclude: "^backend/data/index/"
       - id: check-merge-conflict
       - id: debug-statements
       - id: mixed-line-ending
