--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,6 +8,7 @@ attrs==25.3.0
 backoff==2.2.1
 bcrypt==4.3.0
 beautifulsoup4==4.13.4
+black==25.1.0
 build==1.2.2.post1
 cachetools==5.5.2
 certifi==2025.4.26
@@ -68,6 +69,7 @@ mdurl==0.1.2
 mmh3==5.1.0
 mpmath==1.3.0
 multidict==6.4.3
+mypy==1.15.0
 mypy_extensions==1.1.0
 networkx==3.4.2
 nltk==3.9.1
@@ -99,10 +101,10 @@ pyasn1_modules==0.4.2
 pydantic==2.7.1
 pydantic-settings==2.2.1
 pydantic_core==2.18.2
-Pygments==2.19.1
 PyPika==0.48.9
 pyproject_hooks==1.2.0
 pytest==8.3.5
+Pygments==2.19.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-iso639==2025.2.18
@@ -116,6 +118,7 @@ requests-oauthlib==2.0.0
 requests-toolbelt==1.0.0
 rich==13.7.0
 rsa==4.9.1
+ruff==0.11.9
 safetensors==0.5.3
 scikit-learn==1.6.1
 scipy==1.15.2
