--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -32,6 +32,7 @@ durationpy==0.9
 effdet==0.4.1
 email_validator==2.2.0
 emoji==2.14.1
+et_xmlfile==2.0.0
 fastapi==0.111.0
 fastapi-cli==0.0.5
 filelock==3.18.0
@@ -72,6 +73,7 @@ langdetect==1.0.9
 langsmith==0.1.147
 layoutparser==0.3.4
 lxml==5.4.0
+Markdown==3.8
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 marshmallow==3.26.1
@@ -79,6 +81,7 @@ matplotlib==3.10.3
 mdurl==0.1.2
 mmh3==5.1.0
 mpmath==1.3.0
+msg-parser==1.2.0
 multidict==6.4.3
 mypy==1.15.0
 mypy_extensions==1.1.0
@@ -86,11 +89,13 @@ networkx==3.4.2
 nltk==3.9.1
 numpy==1.26.4
 oauthlib==3.2.2
+olefile==0.47
 omegaconf==2.3.0
 onnx==1.18.0
 onnxruntime==1.15.1
 openai==1.77.0
 opencv-python==4.11.0.86
+openpyxl==3.1.5
 opentelemetry-api==1.32.1
 opentelemetry-exporter-otlp-proto-common==1.32.1
 opentelemetry-exporter-otlp-proto-grpc==1.32.1
@@ -127,8 +132,10 @@ pydantic==2.7.1
 pydantic-settings==2.2.1
 pydantic_core==2.18.2
 Pygments==2.19.1
+pypandoc==1.15
 pyparsing==3.2.3
 pypdf==5.5.0
+PyPDF2==3.0.1
 pypdfium2==4.30.1
 PyPika==0.48.9
 pyproject_hooks==1.2.0
@@ -140,6 +147,7 @@ python-dotenv==1.0.1
 python-iso639==2025.2.18
 python-magic==0.4.27
 python-multipart==0.0.20
+python-pptx==0.6.23
 pytz==2025.2
 PyYAML==6.0.2
 RapidFuzz==3.13.0
@@ -187,5 +195,7 @@ wcwidth==0.2.13
 websocket-client==1.8.0
 websockets==15.0.1
 wrapt==1.17.2
+xlrd==2.0.1
+XlsxWriter==3.2.3
 yarl==1.20.0
 zipp==3.21.0
