--- a/backend_refactor/tests/pytest.ini
+++ b/backend_refactor/tests/pytest.ini
@@ -1,5 +1,5 @@
 [pytest]
-testpaths = backend/tests
+testpaths = backend_refactor/tests
 python_files = test_*.py
 python_classes = Test*
 python_functions = test_*
