refactor: restructure data directory and fix path handling
- Move data directory from backend_refactor/data_processing/data to backend_refactor/data
- Update Makefile and config.py to reflect new data directory structure
- Remove unused _ensure_directory_exists function from directory_utils.py
- Fix ChromaDB path handling by explicitly converting Path to string

--- a/.gitignore
+++ b/.gitignore
@@ -84,5 +84,5 @@ backend/scripts/
 
 repomix-output.xml
 
-backend_refactor/data_processing/data/
+backend_refactor/data/
 backend_refactor/data_processing/logger/logs
