--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -34,7 +34,7 @@ effdet==0.4.1
 email_validator==2.2.0
 emoji==2.14.1
 et_xmlfile==2.0.0
-fastapi==0.111.0
+fastapi==0.115.12
 fastapi-cli==0.0.5
 filelock==3.18.0
 filetype==1.2.0
@@ -43,7 +43,7 @@ fonttools==4.58.0
 frozenlist==1.6.0
 fsspec==2025.3.2
 ftfy==6.1.3
-google-auth==2.39.0
+google-auth==2.27.0
 googleapis-common-protos==1.70.0
 grpcio==1.71.0
 h11==0.16.0
@@ -145,6 +145,7 @@ PyPika==0.48.9
 pyproject_hooks==1.2.0
 pytesseract==0.3.13
 pytest==8.3.5
+pytest-asyncio==0.23.5
 python-dateutil==2.9.0.post0
 python-docx==1.1.2
 python-dotenv==1.0.1
@@ -173,7 +174,7 @@ six==1.17.0
 sniffio==1.3.1
 soupsieve==2.7
 SQLAlchemy==2.0.40
-starlette==0.37.2
+starlette==0.46.2
 sympy==1.14.0
 tabulate==0.9.0
 tenacity==8.5.0
