refactor: improve database configuration and testing setup
- Make database path configurable via METROPOLE_DB_PATH environment variable
- Add proper error handling for database path configuration
- Update test fixtures to use temporary database files
- Clean up environment variables after tests
- Update docker-compose.yml with database path configuration
- Consolidate frontend environment variables

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
       - GOOGLE_CLIENT_SECRET=${GOOGLE_CLIENT_SECRET}
       - PRODUCTION=false
       - ENABLE_DB_DUMP=True
+      - METROPOLE_DB_PATH=/app/backend/server/data/app.db
 
   frontend:
     build:
