--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,8 @@ services:
       - PRODUCTION=false
       - ENABLE_DB_DUMP=True
       - METROPOLE_DB_PATH=/app/backend/server/data/app.db
+      - MAX_QUESTIONS_PER_DAY=30
+      - MAX_QUESTIONS_PER_DAY_ADMIN=300
 
   frontend:
     build:
