--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,9 @@
     "axios": "^1.8.4",
     "jwt-decode": "^4.0.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
+    "styled-components": "^6.1.18"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
