--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -11,6 +11,7 @@ backoff==2.2.1
 bcrypt==4.3.0
 beautifulsoup4==4.13.4
 black==25.1.0
+blinker==1.9.0
 build==1.2.2.post1
 cachetools==5.5.2
 certifi==2025.4.26
@@ -22,6 +23,7 @@ chromadb==0.4.24
 click==8.1.8
 coloredlogs==15.0.1
 contourpy==1.3.2
+coverage==7.8.2
 cryptography==45.0.2
 cycler==0.12.1
 dataclasses-json==0.6.7
@@ -38,12 +40,13 @@ fastapi==0.115.12
 fastapi-cli==0.0.5
 filelock==3.18.0
 filetype==1.2.0
+Flask==3.1.1
 flatbuffers==25.2.10
 fonttools==4.58.0
 frozenlist==1.6.0
 fsspec==2025.3.2
 ftfy==6.1.3
-google-auth==2.27.0
+google-auth==2.39.0
 googleapis-common-protos==1.70.0
 grpcio==1.71.0
 h11==0.16.0
@@ -58,6 +61,7 @@ importlib_metadata==8.6.1
 importlib_resources==6.5.2
 iniconfig==2.1.0
 iopath==0.1.10
+itsdangerous==2.2.0
 Jinja2==3.1.6
 jiter==0.9.0
 joblib==1.4.2
@@ -116,6 +120,7 @@ pathspec==0.12.1
 pdf2image==1.17.0
 pdfminer.six==20221105
 pdfplumber==0.10.3
+peewee==3.18.1
 pikepdf==9.7.0
 pillow==11.2.1
 pillow_heif==0.22.0
@@ -146,6 +151,7 @@ pyproject_hooks==1.2.0
 pytesseract==0.3.13
 pytest==8.3.5
 pytest-asyncio==0.23.5
+pytest-cov==6.1.1
 python-dateutil==2.9.0.post0
 python-docx==1.1.2
 python-dotenv==1.0.1
@@ -174,6 +180,7 @@ six==1.17.0
 sniffio==1.3.1
 soupsieve==2.7
 SQLAlchemy==2.0.40
+sqlite-web==0.6.4
 starlette==0.46.2
 sympy==1.14.0
 tabulate==0.9.0
@@ -202,6 +209,7 @@ wcwidth==0.2.13
 webencodings==0.5.1
 websocket-client==1.8.0
 websockets==15.0.1
+Werkzeug==3.1.3
 wrapt==1.17.2
 xlrd==2.0.1
 XlsxWriter==3.2.3
