--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
       - OPENAI_API_KEY=${OPENAI_API_KEY}
       - GOOGLE_CLIENT_ID=${GOOGLE_CLIENT_ID}
       - GOOGLE_CLIENT_SECRET=${GOOGLE_CLIENT_SECRET}
+      - ADMIN_EMAILS=${ADMIN_EMAILS}
       - PRODUCTION=false
       - ENABLE_DB_DUMP=True
       - METROPOLE_DB_PATH=/app/backend/server/data/app.db
@@ -22,8 +23,6 @@ services:
     build:
       context: ./frontend
       dockerfile: Dockerfile
-    ports:
-      - "3000:3000"
     env_file:
       - ./frontend/.env.production
     depends_on:
@@ -34,6 +33,14 @@ services:
     command:
       - --upstream=http://sqlite-web:8081
       - --http-address=0.0.0.0:4180
+      - --cookie-secure=true
+      - --cookie-samesite=lax
+      - --set-xauthrequest=true
+      - --pass-authorization-header=true
+      - --pass-access-token=true
+      - --skip-provider-button=true
+      - --skip-auth-regex=^/oauth2/.*
+      - --redirect-url=http://localhost:3000/oauth2/callback
     ports:
       - "4180:4180"
     environment:
@@ -42,11 +49,6 @@ services:
       - OAUTH2_PROXY_CLIENT_SECRET=${GOOGLE_CLIENT_SECRET}
       - OAUTH2_PROXY_COOKIE_SECRET=${OAUTH2_PROXY_COOKIE_SECRET}
       - OAUTH2_PROXY_EMAIL_DOMAINS=*
-      - OAUTH2_PROXY_SKIP_AUTH_REGEX=^/oauth2/.*
-      - OAUTH2_PROXY_PASS_ACCESS_TOKEN=true
-      - OAUTH2_PROXY_SET_XAUTHREQUEST=true
-      - OAUTH2_PROXY_PASS_AUTHORIZATION_HEADER=true
-      - OAUTH2_PROXY_SKIP_PROVIDER_BUTTON=true
       - OAUTH2_PROXY_ALLOWED_EMAILS=${ADMIN_EMAILS}
     depends_on:
       - sqlite-web
@@ -62,6 +64,17 @@ services:
       - "8081"
     depends_on:
       - backend
+
+  nginx:
+    image: nginx:1.25
+    ports:
+      - "3000:3000"
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+    depends_on:
+      - frontend
+      - oauth2-proxy
+    restart: unless-stopped
 
 volumes:
   metpol-sqlite:
