--- a/fly.toml
+++ b/fly.toml
@@ -18,6 +18,24 @@ primary_region = 'sea'
     port = 443
     handlers = ["tls", "http"]
 
+# OAuth2 Proxy service
+[[services]]
+  internal_port = 4180
+  protocol = "tcp"
+
+  [[services.ports]]
+    port = 4180
+    handlers = ["tls", "http"]
+
+# SQLite Web service
+[[services]]
+  internal_port = 8081
+  protocol = "tcp"
+
+  [[services.ports]]
+    port = 8081
+    handlers = ["tls", "http"]
+
 [[vm]]
   memory = '1gb'
   cpu_kind = 'shared'
@@ -30,6 +48,17 @@ primary_region = 'sea'
   METROPOLE_DB_PATH = "/data/app.db"
   MAX_QUESTIONS_PER_DAY = 50
   MAX_QUESTIONS_PER_DAY_ADMIN = 300
+  # OAuth2 Proxy environment variables
+  OAUTH2_PROXY_PROVIDER = "google"
+  OAUTH2_PROXY_EMAIL_DOMAINS = "*"
+  OAUTH2_PROXY_ALLOWED_EMAILS = "${ADMIN_EMAILS}"
+  OAUTH2_PROXY_COOKIE_SECURE = "true"
+  OAUTH2_PROXY_COOKIE_SAMESITE = "lax"
+  OAUTH2_PROXY_SET_XAUTHREQUEST = "true"
+  OAUTH2_PROXY_PASS_AUTHORIZATION_HEADER = "true"
+  OAUTH2_PROXY_PASS_ACCESS_TOKEN = "true"
+  OAUTH2_PROXY_SKIP_PROVIDER_BUTTON = "true"
+  OAUTH2_PROXY_SKIP_AUTH_REGEX = "^/oauth2/.*"
 
 [mounts]
   source = "chroma_data"
