--- a/nginx.conf
+++ b/nginx.conf
@@ -36,6 +36,18 @@ http {
             proxy_set_header Connection "upgrade";
         }
 
+        # Proxy all other /admin API requests to backend
+        location ~ ^/admin(?!/db-query) {
+            proxy_pass http://backend:8000;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+        }
+
         # Proxy /static/ to oauth2-proxy
         location /static/ {
             proxy_pass http://oauth2-proxy:4180/static/;
