feat: Add OAuth2 proxy integration and admin DB query UI
- Add OAuth2 proxy integration with Google authentication
- Implement admin-only DB query UI using sqlite-web
- Add integration tests for OAuth flow and proxy routing
- Update design docs with admin DB query UI specification
- Add config snapshot script for OAuth and routing setup
- Update .gitignore for config snapshots

This change enables secure admin access to the database through a web UI,
protected by Google OAuth and restricted to admin users only.

--- a/.gitignore
+++ b/.gitignore
@@ -87,3 +87,6 @@ repomix-output.xml
 backend/data/
 backend/data_processing/logger/logs
 backend/server/data/app.db
+
+# Config snapshots
+config_snapshot_*/
