--- a/nginx.conf
+++ b/nginx.conf
@@ -60,6 +60,18 @@ http {
             proxy_set_header Connection "upgrade";
         }
 
+        # Proxy /api/ to backend
+        location /api/ {
+            proxy_pass http://backend:8000/api/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+        }
+
         # Everything else goes to the frontend
         location / {
             proxy_pass http://frontend:3000;
