Fix DB Query routing

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,7 @@ services:
   oauth2-proxy:
     image: bitnami/oauth2-proxy:latest
     command:
-      - --upstream=http://sqlite-web:8081
+      - --upstream=http://sqlite-web:8081/
       - --http-address=0.0.0.0:4180
       - --cookie-secure=true
       - --cookie-samesite=lax
