--- a/nginx.conf
+++ b/nginx.conf
@@ -34,6 +34,12 @@ http {
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "upgrade";
+            proxy_set_header X-Original-URI $request_uri;
+
+            sub_filter_types text/html;
+            sub_filter 'href=\"/' 'href=\"/admin/db-query/';
+            sub_filter 'action=\"/' 'action=\"/admin/db-query/';
+            sub_filter_once off;
         }
 
         # Proxy all other /admin API requests to backend
