--- a/fly.toml
+++ b/fly.toml
@@ -3,8 +3,8 @@
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = 'metpol-ai'
-primary_region = 'sea'
+app = "metpol-ai"
+primary_region = "sea"
 
 [[services]]
   internal_port = 8000
@@ -17,6 +17,16 @@ primary_region = 'sea'
   [[services.ports]]
     port = 443
     handlers = ["tls", "http"]
+
+  auto_stop_machines = true
+  auto_start_machines = true
+  min_machines_running = 0
+  processes = ["app"]
+
+  [[services.tcp_checks]]
+    interval = "15s"
+    timeout = "2s"
+    grace_period = "1s"
 
 [[vm]]
   memory = '1gb'
