Get ready for nginx backend

--- a/fly.toml
+++ b/fly.toml
@@ -18,6 +18,14 @@ primary_region = "sea"
     port = 443
     handlers = ["tls", "http"]
 
+  [[services]]
+    internal_port = 8080
+    protocol = "tcp"
+
+    [[services.ports]]
+      port = 8080
+      handlers = ["http"]
+
   auto_stop_machines = true
   auto_start_machines = true
   min_machines_running = 0
