--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -18,11 +18,24 @@ http {
         # API routes go to FastAPI backend
         location /api/ {
             proxy_pass http://backend;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header X-Forwarded-Host $host;
+            proxy_set_header X-Forwarded-Port $server_port;
         }
 
         # Database admin interface (will be secured in step 5)
+        # Strip /db prefix when forwarding to sqlite-web
         location /db/ {
-            proxy_pass http://sqlite-web;
+            proxy_pass http://sqlite-web/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header X-Forwarded-Host $host;
+            proxy_set_header X-Forwarded-Port $server_port;
         }
 
         # Health check endpoint
