--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,7 +39,9 @@ services:
       - backend
       - sqlite-web
     volumes:
+      # Mount nginx config and htpasswd file
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./nginx/.htpasswd:/etc/nginx/.htpasswd:ro
 
 volumes:
   metpol-sqlite:
