--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -26,9 +26,13 @@ http {
             proxy_set_header X-Forwarded-Port $server_port;
         }
 
-        # Database admin interface (will be secured in step 5)
-        # Strip /db prefix when forwarding to sqlite-web
+        # Database admin interface - secured with HTTP basic auth
         location /db/ {
+            # HTTP Basic Auth protection
+            auth_basic "Database Admin Access";
+            auth_basic_user_file /etc/nginx/.htpasswd;
+
+            # Proxy to sqlite-web
             proxy_pass http://sqlite-web/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
