--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "echo \"No tests configured yet\" && exit 0",
+    "type-check": "echo \"No type checking configured yet\" && exit 0"
   },
   "dependencies": {
     "@react-oauth/google": "^0.12.2",
