--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,10 +43,9 @@ jobs:
         run: |
           export PYTHONPATH="${PYTHONPATH}:$(pwd)"
           export GOOGLE_CLIENT_ID="test_client_id"
-          export GOOGLE_CLIENT_SECRET="test_secret"
           export ADMIN_EMAILS="admin@example.com"
           export OPENAI_API_KEY="test_key"
-          export METROPOLE_DB_PATH="/tmp/test.db"
+          export DATABASE_PATH="/tmp/test.db"
 
       - name: Lint with flake8
         working-directory: ./backend
@@ -86,10 +85,9 @@ jobs:
         env:
           PYTHONPATH: ${{ github.workspace }}/backend
           GOOGLE_CLIENT_ID: test_client_id
-          GOOGLE_CLIENT_SECRET: test_secret
           ADMIN_EMAILS: admin@example.com
           OPENAI_API_KEY: test_key
-          METROPOLE_DB_PATH: /tmp/test.db
+          DATABASE_PATH: /tmp/test.db
         run: |
           python -m pytest server/tests/ -v \
             --cov=server \
@@ -154,10 +152,8 @@ jobs:
         working-directory: ./frontend
         run: npm run build
         env:
-          VITE_OAUTH_CLIENT_ID: ${{ secrets.VITE_OAUTH_CLIENT_ID || 'test_client_id' }}
+          VITE_GOOGLE_CLIENT_ID: ${{ secrets.VITE_GOOGLE_CLIENT_ID || 'test_client_id' }}
           VITE_BACKEND_URL: http://localhost:8000
-          VITE_FRONTEND_URL: http://localhost:3000
-          VITE_OAUTH_REDIRECT_URI: http://localhost:3000/oauth2/callback
 
   # Docker Build Test
   docker-build:
@@ -185,10 +181,9 @@ jobs:
         run: |
           # Create minimal .env for testing
           echo "GOOGLE_CLIENT_ID=test_client_id" > .env
-          echo "GOOGLE_CLIENT_SECRET=test_secret" >> .env
           echo "ADMIN_EMAILS=admin@example.com" >> .env
           echo "OPENAI_API_KEY=test_key" >> .env
-          echo "METROPOLE_DB_PATH=/data/app.db" >> .env
+          echo "DATABASE_PATH=/data/app.db" >> .env
 
           # Build all services
           docker-compose build --no-cache
